fixed text alignment with search bar

--- a/src/components/Countries/Countries.css
+++ b/src/components/Countries/Countries.css
@@ -14,4 +14,5 @@
   border-style: groove;
   border-width: 4px;
   border-color: aquamarine;
+  align-items: center;
 }
